apps/whereami/whereami-frontend/k8s/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: whereami-frontend-virtualservice-external
spec:
    hosts:
    - "WHEREAMI_APP_NAME.endpoints.PROJECT_ID.cloud.goog"
    gateways:
    - asm-gateways/asm-ingress-gateway
    http:
    - route:
        - destination:
            host: whereami-frontend
            port:
              number: 80
            subset: whereami-frontend-prod
